Fix collapsing height

--- a/src/style.css
+++ b/src/style.css
@@ -264,15 +264,30 @@
 
 /* !START */
 
-/* .benefits-container img {
-  display: none;
-} */
-
-.benefit_lines.is-big,
-.benefit_lines.is-small {
+.benefit_lines.is-big {
   display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+
   height: 100%;
   width: 100%;
+
+  grid-row: 2 / 3;
+  grid-column: 1 / -1;
+  z-index: 1;
+}
+
+.svg-line-big,
+.svg-line-small {
+  grid-row: 2 / 3;
+  grid-column: 1 / -1;
+  height: 100%;
+  width: 100%;
+}
+
+.benefit_lines.is-small {
+  display: none;
 }
 
 /* !END */
@@ -331,36 +346,11 @@
   stroke-width: 2;
 } */
 
-.benefit_lines.is-big {
-  width: 100%;
-}
-
-.benefit_lines.is-small {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  grid-row: 2 / 3;
-  grid-column: 1 / -1;
-  z-index: 1;
-  /* 
-  display: flex;
-  justify-content: center; */
-}
-
-.benefit_lines.is-small {
-  display: none;
-}
 /* !END */
 
 .benefit_wrapper.is-track-bottom {
   grid-row: 3 / 4;
   grid-column: 1 / -1;
-}
-
-@media (max-width: 1280px) {
-  .benefit-container {
-    grid-template-rows: auto auto auto; /* Adjust rows for smaller screens */
-  }
 }
 
 /* ================== */
